--- a/docs/zh/incubator/p1p2.md
+++ b/docs/zh/incubator/p1p2.md
@@ -1,4 +1,4 @@
-![venus-cluster](../.vuepress/public/venus-incubator.jpg)
+![venus-cluster](../../.vuepress/public/venus-incubator.jpg)
 
 ### Phase 1&2 (end)
 
