--- a/docs/zh/master/p1.md
+++ b/docs/zh/master/p1.md
@@ -1,4 +1,4 @@
-![venus-cluster](../.vuepress/public/venus-master.jpg)
+![venus-cluster](../../.vuepress/public/venus-master.jpg)
 
 ### Phase 1 (end)
 
