update cn pages

--- a/docs/zh/incubator/p1p2.md
+++ b/docs/zh/incubator/p1p2.md
@@ -2,10 +2,15 @@
 
 ### Phase 1&2 (end)
 
-Phase 1 and Phase 2 of Venus SP Incubator was started on July 8, 2021 running until Feb.6 2022. 
+Venus SP Incubator的一期和二期于2021年7月8日开始，于 2022年2月6日结束。
 
-There was a prerequisite for SPs which required storage providers to have a minimum sealing power to support at least 1TiB/day. There were 97 applications we received during past two phases, 22 SPs have been incubated in the program. 
+加入孵化器的SP有一个最低要求，即该SP具有支持至少 1TiB/天的封装能力。
 
-Approximately 1850TiB storage power have been sealed on Filecoin network during Venus Incubator Phase1 and Phase 2. ### Links
-- SP interview (Phase 1): [link](https://medium.com/@forcecommunity-official/interview-hows-it-like-to-join-the-incubation-center-ab04c6b46acf)
-- SP interview (Phase 2): [link](https://medium.com/@forcecommunity-official/the-2-phase-of-incubation-center-was-closed-interviews-with-participant-representatives-4cede89962f4)
+在过去的两个阶段中，我们收到了 97 份申请，22 个 SP 已经成功参与到孵化器并封装了扇区。
+
+在孵化器前两期，SP共成功封装了1850TiB的数据。
+
+### 链接
+
+- SP访谈（第一阶段）：[链接](https://medium.com/@forcecommunity-official/interview-hows-it-like-to-join-the-incubation-center-ab04c6b46acf)
+- SP访谈（第二阶段）：[链接](https://medium.com/@forcecommunity-official/the-2-phase-of-incubation-center-was-closed-interviews-with-participant-representatives-4cede89962f4)
