--- a/docs/zh/master/p1.md
+++ b/docs/zh/master/p1.md
@@ -2,14 +2,14 @@
 
 ### Phase 1 (end)
 
-Venus Master Phase 1 started from Sept. 20, 2021 running until Feb.6, 2022. To be a Venus Master, participant should continuously contributes to the development of the Filecoin network with full experience in coding, mining or service. Selected Masters will provide consulting services and technical support to the storage providers in the Incubation Center, ensure these participants to expand the distributed storage pool service in the Filecoin network.### Results
-Phase1 of Venus Master has ended in Feb.2022, There were 8 individuals who made their contribution as Venus Master for the community, they are: 
+Venus Master 第 1 阶段从 2021 年 9 月 20 日开始，一直持续到 2022 年 2 月 6 日。要成为 Venus Master，参与者应在编程或服务方面拥有丰富的经验，不断为 Filecoin 网络的发展做出贡献。入选的Venus Master将为Venus Incubator的存储提供商提供咨询服务和技术支持，帮助Incubator参与者在Filecoin网络中使用Venus扩展分布式存储池服务。### 成果
+Venus Master 第一阶段已于 2022 年 2 月结束，共有 8 人作为 Venus Master为社区做出贡献，他们是：
 
 <!--<center>-->
 
-| Slack ID    | Region |
+| Slack ID    | 区域 |
 | ----------- | ----------- |
 | @Dennis Zou    | Aisa       |
 | @Jello Huang   | Asia       |
 | @cryptozou   | Asia       |
-| @mariswang   | Asia       |<!--</center>-->A total of 1000FIL Rewards Pool were partly distributed to the masters based on their service performance. 
+| @mariswang   | Asia       |<!--</center>-->总共 1000FIL 奖励池，根据Master们的服务表现，已部分奖励给他们。
