--- a/docs/zh/master/p2.md
+++ b/docs/zh/master/p2.md
@@ -1,19 +1,14 @@
-## How to become a Venus Master
-To be a Venus Master, ones need to provide technical support to storage providers and participate into the community discussion. 
-Once the application is approved, a Venus Master should take the Venus Course first. 
-
-Then if possible a Venus Master could deploy Venus on Calibration network with the help from Venus core team. Those ones who successfully deployed Venus on Calibration will be assigned to help some SPs in Venus Incubator to earn a quite part of the reward. 
-
-However, a Venus Master can still support the community by simply answering questions in Venus community channels, participating in Venus Meetup or reporting issues&discussions on Github to earn the program reward. ## Requirements and rewards
-- Phase 2 Master Count: 12- Minimum Effective Service Period: 90 days- Reward Amount: up to 5,000USD for each Master- Service objectives and reward distribution standard: | Objective   | Percentage | Reward(USD) |
+## 如何成为 Venus Master
+要成为Venus Master，需要为SP提供技术支持并参与社区讨论。申请获得批准后，Venus Master会首先进行Venus课程培训。如果有条件的Venus Master 可以在 Venus 核心团队的帮助下在 Calibration 网络上部署 Venus。成功在Calibration上部署Venus的人将为Venus Incubator中的一些SP提供专业的技术支持并获得大量Master奖励。好消息是，自己没有硬件的伙伴们仍然可以加入Venus Master的行列。在完成课程培训后，根据个人经验和培训内容，在Venus的社区频道解答成员们的问题，积极参加Venus Meetup的讨论，或在Github上提Issue和Discussion都可以获得丰厚的Master奖励。## 条件和奖励
+- 阶段2 Master招募数量：12位- 有效服务期：90 天以上- 奖励金额：每位Master最高获得5,000USD奖励服务目标及奖励分配标准：| 目标   | 占比 | 奖励（USD） |
 | ----------------- | -- | -- |
-| Pass Venus Course    | 1%  | 50 |
-| Deployment of Venus on Calibration    | 4%  | 200 |
-| Community Channel Activity    | 20%  | 1,000 |
-| Issues (from testing/support/prod) and discussions on Github    | 20%  | 1,000 |
-| 1on1 Incubation SPs support   | 40%  | 2,000 |
-| Outstanding Service Bonus  | 15%  | 750 |
-| Total    | 100%  | 5,000 |## Recruiting period
+| 完成并通过Venus课程    | 1%  | 50 |
+| Venus部署校准网    | 4%  | 200 |
+| 参与Venus社区各频道活动   | 20%  | 1,000 |
+| 参与Github上Venus的Issues和Discussions（测试、支持、产品）    | 20%  | 1,000 |
+| 一对一的服务SP   | 40%  | 2,000 |
+| 额外贡献  | 15%  | 750 |
+| Total    | 100%  | 5,000 |## 招募时间
 
-- From: Mar 25th, 2022- To: Sep 25th, 2022## Links
-- Venus Course: - Application Form：- Contact: [link](/contact) 
+- 起始：2022 年 3 月 25 日- 至：2022 年 9 月 25 日## 链接
+- Venus Course: [link](https://venus.filecoin.io/zh/master/)- Application Form：- Contact: [link](/contact) 
