--- a/docs/zh/master/p1.md
+++ b/docs/zh/master/p1.md
@@ -2,8 +2,10 @@
 
 ### Phase 1 (end)
 
-Venus Master 第 1 阶段从 2021 年 9 月 20 日开始，一直持续到 2022 年 2 月 6 日。要成为 Venus Master，参与者应在编程或服务方面拥有丰富的经验，不断为 Filecoin 网络的发展做出贡献。入选的Venus Master将为Venus Incubator的存储提供商提供咨询服务和技术支持，帮助Incubator参与者在Filecoin网络中使用Venus扩展分布式存储池服务。### 成果
-Venus Master 第一阶段已于 2022 年 2 月结束，共有 8 人作为 Venus Master为社区做出贡献，他们是：
+Venus Master 第 1 阶段从 2021 年 9 月 20 日开始，一直持续到 2022 年 2 月 6 日。要成为 Venus Master，参与者应在编程或服务方面拥有丰富的经验，不断为 Filecoin 网络的发展做出贡献。入选的Venus Master将为Venus Incubator的存储提供商提供咨询服务和技术支持，帮助Incubator参与者在Filecoin网络中使用Venus扩展分布式存储池服务。
+
+### 成果
+Venus Master 第一阶段已于 2022 年 2 月结束，共有 4 人作为 Venus Master为社区做出贡献，他们是：
 
 <!--<center>-->
 
@@ -12,4 +14,9 @@ Venus Master 第 1 阶段从 2021 年 9 月 20 日开始，一直持续到 2022 
 | @Dennis Zou    | Aisa       |
 | @Jello Huang   | Asia       |
 | @cryptozou   | Asia       |
-| @mariswang   | Asia       |<!--</center>-->总共 1000FIL 奖励池，根据Master们的服务表现，已部分奖励给他们。
+| @mariswang   | Asia       |
+
+<!--</center>-->
+
+总共 1000FIL 奖励池，根据Master们的服务表现，已部分奖励给他们。
+
