update apply section

--- a/docs/master/p2.md
+++ b/docs/master/p2.md
@@ -1,1 +1,1 @@
-## How to become a Venus MasterTo be a Venus Master, ones need to provide technical support to storage providers and participate into the community discussion. Once the application is approved, a Venus Master should take the Venus Course first. Then if possible a Venus Master could deploy Venus on Calibration network with the help from Venus core team. Those ones who successfully deployed Venus on Calibration will be assigned to help some SPs in Venus Incubator to earn a quite part of the reward. However, a Venus Master can still support the community by simply answering questions in Venus community channels, participating in Venus Meetup or reporting issues&discussions on Github to earn the program reward. ## Requirements and rewards- Phase 2 Master Count: 12- Minimum Effective Service Period: 90 days- Reward Amount: up to 5,000USD for each Master- Service objectives and reward distribution standard: | Objective   | Percentage | Reward(USD) || ----------------- | -- | -- || Pass Venus Course    | 1%  | 50 || Deployment of Venus on Calibration    | 4%  | 200 || Community Channel Activity    | 20%  | 1,000 || Issues (from testing/support/prod) and discussions on Github    | 20%  | 1,000 || 1on1 Incubation SPs support   | 40%  | 2,000 || Outstanding Service Bonus  | 15%  | 750 || Total    | 100%  | 5,000 |## Recruiting period- From: April 11st, 2022- To: Oct 10th, 2022## Links- Venus Course: [link](https://venus.filecoin.io/master/)- Application Form：[link](http://venusteam.mikecrm.com/KWWYu0F)- Contact: [link](/contact) 
+## How to become a Venus MasterTo be a Venus Master, ones need to provide technical support to storage providers and participate into the community discussion. Once the application is approved, a Venus Master should take the Venus Course first. Then if possible a Venus Master could deploy Venus on Calibration network with the help from Venus core team. Those ones who successfully deployed Venus on Calibration will be assigned to help some SPs in Venus Incubator to earn a quite part of the reward. However, a Venus Master can still support the community by simply answering questions in Venus community channels, participating in Venus Meetup or reporting issues&discussions on Github to earn the program reward. ## Requirements and rewards- Phase 2 Master Count: 12- Minimum Effective Service Period: 90 days- Reward Amount: up to 5,000USD for each Master- Service objectives and reward distribution standard: | Objective   | Percentage | Reward(USD) || ----------------- | -- | -- || Pass Venus Course    | 1%  | 50 || Deployment of Venus on Calibration    | 4%  | 200 || Community Channel Activity    | 20%  | 1,000 || Issues (from testing/support/prod) and discussions on Github    | 20%  | 1,000 || 1on1 Incubation SPs support   | 40%  | 2,000 || Outstanding Service Bonus  | 15%  | 750 || Total    | 100%  | 5,000 |## Recruiting period- From: April 11st, 2022- To: Oct 10th, 2022## Apply- Application Form：[link](http://venusteam.mikecrm.com/KWWYu0F)## Links- Venus Course: [link](https://venus.filecoin.io/master/)- Contact: [link](/contact) 
