--- a/docs/zh/master/p2.md
+++ b/docs/zh/master/p2.md
@@ -1,1 +1,1 @@
-## 如何成为 Venus Master要成为Venus Master，需要为SP提供技术支持并参与社区讨论。申请获得批准后，Venus Master会首先进行Venus课程培训。如果有条件的Venus Master 可以在 Venus 核心团队的帮助下在 Calibration 网络上部署 Venus。成功在Calibration上部署Venus的人将为Venus Incubator中的一些SP提供专业的技术支持并获得大量Master奖励。好消息是，自己没有硬件的伙伴们仍然可以加入Venus Master的行列。在完成课程培训后，根据个人经验和培训内容，在Venus的社区频道解答成员们的问题，积极参加Venus Meetup的讨论，或在Github上提Issue和Discussion都可以获得丰厚的Master奖励。## 条件和奖励- 阶段2 Master招募数量：12位- 有效服务期：90 天以上- 奖励金额：每位Master最高获得5,000USD奖励服务目标及奖励分配标准：| 目标   | 占比 | 奖励（USD） || ----------------- | -- | -- || 完成并通过Venus课程    | 1%  | 50 || Venus部署校准网    | 4%  | 200 || 参与Venus社区各频道活动   | 20%  | 1,000 || 参与Github上Venus的Issues和Discussions（测试、支持、产品）    | 20%  | 1,000 || 一对一的服务SP   | 40%  | 2,000 || 额外贡献  | 15%  | 750 || Total    | 100%  | 5,000 |## 招募时间- 起始：2022 年 4 月 11 日- 至：2022 年 10 月 10 日## 链接- Venus Course: [link](https://venus.filecoin.io/zh/master/)- Application Form：[link](http://venusteam.mikecrm.com/KWWYu0F)- Contact: [link](/contact) 
+## 如何成为 Venus Master要成为Venus Master，需要为SP提供技术支持并参与社区讨论。申请获得批准后，Venus Master会首先进行Venus课程培训。如果有条件的Venus Master 可以在 Venus 核心团队的帮助下在 Calibration 网络上部署 Venus。成功在Calibration上部署Venus的人将为Venus Incubator中的一些SP提供专业的技术支持并获得大量Master奖励。好消息是，自己没有硬件的伙伴们仍然可以加入Venus Master的行列。在完成课程培训后，根据个人经验和培训内容，在Venus的社区频道解答成员们的问题，积极参加Venus Meetup的讨论，或在Github上提Issue和Discussion都可以获得丰厚的Master奖励。## 条件和奖励- 阶段2 Master招募数量：12位- 有效服务期：90 天以上- 奖励金额：每位Master最高获得5,000USD奖励服务目标及奖励分配标准：| 目标   | 占比 | 奖励（USD） || ----------------- | -- | -- || 完成并通过Venus课程    | 1%  | 50 || Venus部署校准网    | 4%  | 200 || 参与Venus社区各频道活动   | 20%  | 1,000 || 参与Github上Venus的Issues和Discussions（测试、支持、产品）    | 20%  | 1,000 || 一对一的服务SP   | 40%  | 2,000 || 额外贡献  | 15%  | 750 || Total    | 100%  | 5,000 |## 招募时间- 起始：2022 年 4 月 11 日- 至：2022 年 10 月 10 日## 申请- 申请表：[link](http://venusteam.mikecrm.com/KWWYu0F)## 链接- Venus大师课: [link](https://venus.filecoin.io/zh/master/)- 联系: [link](/contact) 
