--- a/docs/accelerator/p1.md
+++ b/docs/accelerator/p1.md
@@ -1,1 +1,31 @@
-### Coming Soon...
+## Background
+
+There are about 4000 active nodes providing a huge amount of storage power on Filecoin network now, however not all SPs are storing real data from clients. 
+Venus as one of the four implementations, has been proved secure and efficient on storage providing. To improve the total (data) value on Filecoin network, Venus aims to provide an easier way to get SPs involved into deal storage. By using Venus as the software to provide storage, we hope all SPs can take deals from clients and improve the total value of the network. 
+ 
+## About
+
+Based on the distributed architecture of Venus and the pool mode support of venus-market, Venus Deal Accelerator provides participants with free complete chain services, deals, and necessary technical assistance. It means that participants don’t need to install and register on a third party software, neither have to run their own market modules. 
+No matter what implementation a SP is using to run the node, one just needs to switch to Venus to join the program. 
+Venus Deal Accelerator guarantees the smooth development of the real data storage of Venus nodes, and promotes the development of Filecoin storage.
+
+## Rules
+
+There is a total of 5PiB deals with datacap to be distributed in 12 months (before June 2023), 100TiB per week. 
+Each SP can get upto 300TiB deals throughout the whole program. 
+SPs need to join the Venus Chain Service that is provided by the Venus Team or deploy their own Venus Chain Service to be qualified for the Accelerator. 
+SPs need to finish the sealing of deals they received before applying more deals. 
+Note that the Deal Accelerator will conduct data transfer online/offline in suitable situations. 
+
+## How To Apply
+
+To join the Venus Deal Accelerator, please fill out this [application form](http://venusteam.mikecrm.com/RsJflfk). Venus team will contact with you as soon as possible. 
+
+## Contact us
+
+If you have any questions about the Venus Deal Accelerator, you can contact the Venus team directly for assistance, contact us via email or Filecoin Slack: #fil-venus, [#fil-venus-cn](https://filecoinproject.slack.com/archives/C028PCH8L31) 
+
+## Links
+
+Migrate to Venus: [link](https://venus.filecoin.io/zh/cluster/migrate_sectors.html)
+More information about venus-market module: [link](https://venus.filecoin.io/market/)
