remove per week grow limit

--- a/docs/accelerator/p2.md
+++ b/docs/accelerator/p2.md
@@ -16,7 +16,7 @@ Venus Deal Accelerator guarantees the smooth development of the real data storag
 
 ## Rules
 
-There is a total of 20PiB deals with datacap to be distributed in 12 months (before June 2024), 400TiB per week. 
+There is a total of 20PiB deals with datacap to be distributed in 12 months (before June 2024). 
 
 Each SP can get upto 1PiB deals throughout the whole program. 
 
